--- a/css/layout.scss
+++ b/css/layout.scss
@@ -2,3 +2,10 @@
   cursor: pointer;
   color: blue;
 }
+
+.booth {
+  border: 1px black solid;
+  width: 10%;
+  padding: 10px;
+  margin-bottom: 10px;
+}
